# rentbyai

./: .gitignore  Anchor.toml  BUILD_SUMMARY.md  Cargo.toml  DEPLOY-NOW.md  DEPLOYMENT-READY.md  DEPLOYMENT-STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  Dockerfile.anchor  IMPLEMENTATION_PROGRESS.md  PROFESSIONAL_MARKETPLACE_DESIGN.md  PROGRAM_DEPLOYMENT_GUIDE.md  PROGRESS.md  README.md  SKILL.md  UI_OVERHAUL_PROPOSAL.md  app.json  deploy-program.js  fix-program-id.sh  install-solana.sh  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: .env.example  API.md  index.js  jest.config.json  package-lock.json  package.json
api/lib/: store.js
api/src/: index.js
api/tests/: README.md  api.test.js
app/: IMPLEMENTATION_GUIDE.md  QUICK_START.sh  README.md  UI_OVERHAUL_README.md  VISUAL_COMPARISON.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.new.js
app/app/: globals.css  layout.tsx  page.tsx
app/components/: NewHero.tsx  NewResourceCard.tsx  RentResourceForm.tsx  (+2 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT-ALTERNATIVES.md  DEPLOYMENT-OPTIONS.md  DEPLOYMENT.md  PRODUCTION-CHECKLIST.md  SECURITY.md  TROUBLESHOOTING.md
frontend/: .env.example  vercel.json
programs/rentby/: Cargo.toml
programs/rentby/src/: lib.rs
scripts/: deploy-api.sh  deploy-devnet.sh  deploy-frontend.sh  deploy-heroku.sh  deploy-render.sh  deployment-status.sh  docker-build-contracts.sh  pre-deploy-check.sh  test-deployment.sh  verify-deployment.sh
tests/: README.md  rentby.ts
(+28 files in other folders)
