[package]
name = "rentby"
version = "0.1.0"
description = "RentBy - Agent resource marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rentby"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
